<resources>
    <string name="app_name">Los Coches Aguazul</string>
    <string name="label_login">Iniciar Sesión</string>
    <string name="email">E-mail</string>
    <string name="password">Contraseña</string>
    <string name="btn_login">Ingresar</string>
    <string name="link_yet_not_register">¿Aún no te has registrado?</string>
    <string name="label_register">Registro</string>
    <string name="name">Nombre(s)</string>
    <string name="last_name">Apellido(s)</string>
    <string name="password_confirmation">Confirmar contraseña</string>
    <string name="btn_register">Registrase</string>
    <string name="have_an_account">Ya tienes una cuenta</string>
    <string name="please_fill_your_register_data">Por favor completa los campos con tus datos</string>
    <string name="please_fill_your_credentials">Por favor ingresa las credentials</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="label_welcome">Bienvenido</string>
    <string name="btn_account">Cuenta</string>
    <string name="btn_logout">Salír</string>
    <string name="btn_our_services">Conoce nuestros servicios</string>
    <string name="btn_reserve_appointment">Agendar Cita</string>
    <string name="btn_watch_appointments">Ver citas</string>
    <string name="btn_register_vehicle">Registrar Vehículo</string>
    <string name="label_appointment">Agendar cita</string>
    <string name="ca_label_selectCar">Seleccionar Vehículo</string>
    <string name="title_activity_user_vehicle_show">UserVehicleShowActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_user_service_select">UserServiceSelectActivity</string>
    <string name="auv_title_select">Selecciona o registra un vehículo</string>
    <string name="auvs_register_vehicle">Registrar nuevo vehículo</string>
    <string name="auvc_select_vehicle">Selecciona o registra un vehículo</string>
    <string name="auvs_btn_next">Continuar</string>
    <string name="auss_select_service">Selecciona servicio</string>
    <string name="btn_home">Inicio</string>
    <string name="btn_create_appointment">Agendar cita</string>
    <string name="title_list_appointments">Citas Agendadas</string>
    <string name="label_register_vehicle">Registrar Vehículo</string>
    <string name="label_select_mark">Selecciona una marca</string>
    <string name="label_mark_selected">Marca seleccionada</string>
    <string name="label_mark">Marca</string>
    <string name="label_select_line_vehicle">Selecciona línea del vehículo</string>
    <string name="label_fill_plate_vehicle">Ingrese placa del vehículo</string>
    <string name="label_fill_color_vehicle">Ingrese color del vehículo</string>
    <string name="label_list_vehicles">Vehículos Registrados</string>
    <string name="btn_vehicles_register">Vehículos registrados</string>
</resources>